--- a/CSS/style.css
+++ b/CSS/style.css
@@ -15,3 +15,23 @@ body {
     max-width: 1200px;
     margin: 0 auto;
 }
+
+.encabezado-principal {
+    background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/img_1.jfif);
+    background-position: center left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 95vh;
+    display: flex;
+    align-items: center;
+}
+
+.encabezado {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
