--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,3 +35,27 @@ body {
     align-items: center;
     justify-content: space-between;
 }
+
+.logo-alquimia {
+    color: #b06994;
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.encabezado-principal .navegacion-menu ul li {
+    position: relative;
+    float: left;
+}
+
+.encabezado-principal .navegacion-menu ul li a {
+    font-size: 18px;
+    padding: 20px;
+    color: #f460c0;
+    display: block;
+    font-weight: 600;
+}
+
+.encabezado-principal .navegacion-menu ul li a:hover {
+    color: #ea1881;
+    display: block;
+}
