--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     font-family: 'Poppins', sans-serif;
+    background-image: url("/IMG/q.jpg");
+    background-size: 100% 100%; /* Ajusta la imagen al 100% de ancho y alto del fondo */
+    background-repeat: no-repeat;
 }
 
 * {
@@ -11,6 +14,7 @@ body {
     list-style: none;
 }
 
+/* inicio header */
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -59,3 +63,75 @@ body {
     color: #ea1881;
     display: block;
 }
+/* fin header */
+
+/* inicio cuerpo */
+general {
+    height: 100%;
+    margin: 0;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center; /* Centra verticalmente */
+    text-align: center; /* Centra el texto en el contenedor */
+    font-family: Arial, sans-serif;
+  }
+
+  section {
+    display: flex;
+    width: auto;
+    height: 500px;
+  }
+  
+  section img {
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: 0.8;
+    transition: 0.5s ease;
+  }
+  
+  /* hover es una pseudo clase */
+  
+  section img:hover {
+    cursor: zoom-in;
+    width: 90%;
+    opacity: 1;
+    filter: contrast(120%);
+  }
+
+  .title h1 {
+    font-size: 9em;
+    font-family: 'Playfair Display'; /* Fuente elegante */
+    background: linear-gradient(45deg, #725134, #6d573c); /* Degradado en tonos cálidos */
+    background-clip: text; 
+    color: transparent;
+    text-align: center;
+    text-shadow: 5px 5px 2px rgba(82, 65, 48, 0.315); /* Sombra sutil */
+    padding-top: 10px;
+}
+
+.parrafos {
+ 
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    
+    text-align: center; /* Centra el texto dentro de cada párrafo */
+    margin: 100px 200px;
+}
+
+    .parrafos p {
+        font-size: 3em;
+        font-family: 'Playfair Display'; /* Fuente elegante */
+        background: linear-gradient(45deg, #725134, #6d573c); /* Degradado en tonos cálidos */
+        background-clip: text; 
+        color: transparent;
+        text-align: center;
+        text-shadow: 5px 5px 2px rgba(82, 65, 48, 0.315); /* Sombra sutil */
+        margin-bottom: 20px;
+
+}
+/* fin cuerpo */
+
+/* inicio pie */
+
+/* fin pie */
