--- a/CSS/style.css
+++ b/CSS/style.css
@@ -131,7 +131,55 @@ general {
 
 }
 /* fin cuerpo */
+/* Footer */
+.footer {
+    background-color: #a8dadc;
+    color: #FFF;
+    text-align: center;
+    padding: 20px 0;
+}
 
+.footer-content {
+    display: grid;
+    gap: 10px;
+    align-items: center;
+    justify-items: center;
+}
+
+.footer-content img {
+    height: 40px;
+    margin: 0 10px;
+}
+
+
+
+
+
+
+
+.buttons{
+min-width: 700px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.buttons a {
+    text-decoration: none;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    background: #314652;
+    color: #f1f1f1;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+    transition: all .4s ease-in-out;
+}
+
+.buttons a:hover {
+transform: scale(1.2);
+}
 /* inicio pie */
 
 /* fin pie */
