--- a/CSS/style.css
+++ b/CSS/style.css
@@ -342,8 +342,9 @@
     text-decoration: underline;
   }
   
-  .links a{
+  .links p a{
     text-decoration: none;
+    color: #5d4fdc;
   }
   .buttons{
   margin-bottom:15px;
